# cpp-project-template

./: .gitignore  CMakeLists.txt  LICENSE  vcpkg.json
cmake/: CompilerWarnings.cmake
src/: Error.h  Logging.h  main.cpp
